--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ input:hover {
   display: inline;
 }
 .liveheading {
-  margin-bottom: 20px;
+  margin: 0px10px;
 }
 .tops {
   margin-top: 5px;
@@ -320,7 +320,24 @@ input:hover {
 .hidden {
   display: none;
 }
+.colorss {
+  -webkit-appearance: none;
+  border: 2px solid #000;
+  border-radius: 5px;
+  width: 50px;
+  height: 50px;
+  padding: 0;
+  cursor: pointer;
+}
+input[type="color"]::-webkit-color-swatch {
+  border: 2px solid #fff;
+  border-radius: 5px;
+}
 
+/* Adjust the appearance of the selected color */
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 2px;
+}
 @media (max-width: 700px) {
   .logo {
     margin-left: 5px;
